[gd_scene load_steps=8 format=3 uid="uid://bywj5of5xn641"]

[ext_resource type="Script" path="res://Scenes/Scenario/multiplayer.gd" id="1_fr3cj"]
[ext_resource type="Texture2D" uid="uid://bykyggb5t6vb7" path="res://Assets/Scenario/Road.png" id="1_ixyy1"]
[ext_resource type="PackedScene" uid="uid://c4wdi7qi73uj5" path="res://Scenes/Scenario/VictoryLine.tscn" id="2_x73th"]
[ext_resource type="FontFile" uid="uid://x2h56im3stvs" path="res://Assets/Fonts/EnterCommand.ttf" id="3_3ol1i"]
[ext_resource type="PackedScene" uid="uid://d0rlcvaona643" path="res://Scenes/Characters/Player2/chicken_player_two.tscn" id="5_d55wd"]
[ext_resource type="PackedScene" uid="uid://byos6hi4bsjv4" path="res://Scenes/Characters/Player1/chicken_player_one.tscn" id="5_e8fi8"]

[sub_resource type="FontVariation" id="FontVariation_adrgp"]

[node name="MultiplayerMode" type="Node2D"]
script = ExtResource("1_fr3cj")

[node name="Road" type="Sprite2D" parent="."]
position = Vector2(160, 90)
scale = Vector2(0.188235, 0.0882353)
texture = ExtResource("1_ixyy1")

[node name="TimerFastRoad" type="Timer" parent="."]
wait_time = 0.3
autostart = true

[node name="TimerSlowRoad" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="VictoryLine" parent="." instance=ExtResource("2_x73th")]

[node name="UI" type="CanvasLayer" parent="."]

[node name="Scoreboard" type="Label" parent="UI"]
offset_left = 160.0
offset_top = -2.0
offset_right = 170.0
offset_bottom = 15.0
theme_override_fonts/font = ExtResource("3_3ol1i")
theme_override_font_sizes/font_size = 0
text = "0"

[node name="Health" type="Label" parent="UI"]
offset_left = 232.0
offset_top = -3.0
offset_right = 440.0
offset_bottom = 16.0
theme_override_fonts/font = ExtResource("3_3ol1i")
text = "Lives Left: 5"

[node name="GameOver" type="Label" parent="UI"]
offset_left = 132.0
offset_top = 92.0
offset_right = 292.0
offset_bottom = 115.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = SubResource("FontVariation_adrgp")

[node name="ChickenPlayerOne" parent="." instance=ExtResource("5_e8fi8")]
position = Vector2(120, 175)

[node name="ChickenPlayerTwo" parent="." instance=ExtResource("5_d55wd")]
position = Vector2(200, 175)

[connection signal="timeout" from="TimerFastRoad" to="." method="_on_timer_fast_road_timeout" flags=18]
[connection signal="timeout" from="TimerSlowRoad" to="." method="_on_timer_slow_road_timeout" flags=18]
